# prunerr

./: .alexrc  .bash_env.sh  .cz.toml  .dir-locals.el.in  .env  .env.in  .gitignore  .gitlab-ci.yml  .hgignore  .hgtags  .pre-commit-config.yaml  .proselintrc.json  .prospector.yaml  .textlintrc.json  .vale.ini  CHANGELOG  CONTRIBUTING.rst  Dockerfile  Dockerfile.devel  LICENSE  MANIFEST.in  Makefile  NEWS-VERSION.rst  NEWS.rst  README  README.rst  TODO.rst  add_show.py  assassinate.py  docker-compose-servarr.yml  docker-compose.override.yml  docker-compose.yml  feed.py  helical.py  model.py  obey.py  package.json  procs.py  prunerr.py  pyproject.toml  (+27 more)
.github/workflows/: build-test-release.yml  build-test.yml  ci-cd.yml  release.yml  test.yml
.reuse/: dep5
LICENSES/: MIT.txt
build-host/: Dockerfile  Makefile  README.rst  requirements-py310.txt  requirements-py311.txt  requirements-py37.txt  requirements-py38.txt  requirements-py39.txt  requirements.txt.in
contrib/: build_daemons.py  helical.py  liverunner.py  livetest.py  setup.py  system.py
doc/: conf.py  index.rst
doc/_static/: style.css
doc/reference/: transmission.rst  transmissionrpc.rst  vxl.rst
docs/: conf.py  contributing.rst  index.rst  todo.rst
docs/_static/: .gitignore
etc/cont-init.d/: 50-prunerr-install
etc/services.d/prunerr/: run
etc/services.d/servarr/: down
gitlab-runner/: .gitignore  docker-compose.yml
gitlab-runner/certs/: .gitignore
gitlab-runner/config/: config.toml.in
home/: .gitignore  .gitignore~  .pypirc.in
home/.config/: .gitignore  prunerr.yml
home/.local/: .gitignore
newsfragments/: +broken-release.bugfix.rst  +config-defaults-example.bugfix.rst  +config-empty-keys.bugfix.rst  +default-python.feature.rst  +docker-readme.bugfix.rst  +download-client-timeout.feature.rst  +hide-connect-err.bugfix.rst  +normalize-ports.bugfix.rst  +release.bugfix.rst  +review-timeouts.bugfix.rst  +servarr-missing-passwd.bugfix.rst  +update-python.feature.rst  +upgrade-requirements.bugfix.rst  .gitignore
requirements/: build.txt  build.txt.in  host.txt.in
requirements/py310/: build.txt  devel.txt  host.txt  test.txt  user.txt
requirements/py311/: build.txt  devel.txt  host.txt  test.txt  user.txt
requirements/py312/: build.txt  devel.txt  test.txt  user.txt
requirements/py37/: build.txt  devel.txt  host.txt  test.txt  user.txt
requirements/py38/: build.txt  devel.txt  host.txt  test.txt  user.txt
requirements/py39/: build.txt  devel.txt  host.txt  test.txt  user.txt
root/etc/services.d/prunerr/: run
s6/etc/s6-overlay/s6-rc.d/svc-transmission/: finish
s6/etc/services.d/default/: finish
scripts/: python-project-structure
source/: conf.py  index.rst
src/projectstructure/: __init__.py  __main__.py  py.typed  utils.py
src/projectstructure/tests/: __init__.py  test_cli.py  test_projectstructure.py
src/prunerr/: __init__.py  __main__.py  downloadclient.py  downloaditem.py  operations.py  runner.py  servarr.py  utils.py
src/prunerr/home/.config/: prunerr.yml
src/prunerr/newsfragments/: +upgrade-requirements.bugfix.rst  +use-case-config-links.doc.rst  ci-gitlab-debug-linter-diff.misc.rst  ci-missing-volume-2.misc.rst  ci-missing-volume.misc.rst  cli-log-level.feature.rst  daemon-loop-memory.feature.rst  first-release.feature.rst  incorrect-timestamps.bugfix.rst  json-results.feature.rst  no-issue-001.misc.rst  python-versions.feature.misc  review-empty-results.bugfix.rst  unregistered-unrecognized-error.bugfix.rst  upgrade-requirements.bugfix.rst  various-test-ci.misc.rst  verify-running.bugfix.rst
src/prunerr/tests/: Makefile  __init__.py  test_cli.py  test_daemon.py  test_download_clients.py  test_downloadclient.py  test_downloaditem.py  test_free_space.py  test_move.py  test_operations.py  test_review.py  test_runner.py  test_servarr.py  test_sync.py  test_verify.py
src/pythonprojectstructure/: __init__.py  __main__.py  tests.py  utils.py  version.py
src/pythonprojectstructure/newsfragments/: +upgrade-requirements.bugfix.rst  .gitignore  001.misc.rst  002.misc.rst  003.misc.rst  004.misc.rst  005.misc.rst  006.misc.rst  007.misc.rst  008.misc.rst  009.misc.rst  010.misc.rst  011.misc.rst  012.misc.rst  013.misc.rst  014.misc.rst  015.misc.rst  016.misc.rst  017.misc.rst  018.misc.rst  019.misc.rst  020.misc.rst  021.misc.rst  022.misc.rst  023.misc.rst  024.misc.rst  026.misc.rst  027.misc.rst  028.misc.rst  029.misc.rst  030.misc.rst  031.misc.rst  032.misc.rst  033.misc.rst  035.misc.rst  bump-update-branch.misc.rst  ci-detached-head.misc.rst  ci-docker-interactive-output.misc.rst  ci-github-release-notes.misc.rst  ci-github-scheduled-upgrade.misc.rst  (+14 more)
src/pythonprojectstructure/tests/: __init__.py  test_cli.py  test_pythonprojectstructure.py
styles/: .gitignore  code.ini
styles/Vocab/Code/: accept.txt
styles/Vocab/Default/: accept.txt
styles/Vocab/Markup/: accept.txt  reject.txt.license
styles/local/: AutomatedReadability.yml  ColemanLiau.yml  FleschKincaid.yml  FleschReadingEase.yml  GunningFog.yml  LIX.yml  SMOG.yml
test/: __init__.py  client.py  torrent.py  utils.py
test/data/: get_torrent_hash.json
tests/: __init__.py  client.py  live.py  session.py  test_pythonprojectstructure.py  torrent.py  torrent.txt  utils.py
tests/prunerrtests/: __init__.py  example-5s.mkv  test_cli.py  test_daemon.py  test_downloadclient.py  test_downloaditem.py  test_free_space.py  test_move.py  test_operations.py  test_review.py  test_runner.py  test_servarr.py  test_verify.py
tests/prunerrtests/home/daemon/.config/: prunerr-example.yml  (+1 more)
transmission/: __init__.py  constants.py  transmission.py  utils.py  vxl.py
transmissionrpc/: __init__.py  client.py  constants.py  error.py  httphandler.py  maketable.py  session.py  torrent.py  transmission.py  utils.py
var/: .gitignore
var-docker/: .gitignore
var/docker/: .gitignore
var/docker/py310/: .gitignore
var/docker/py311/project_structure.egg-info/: .gitignore
var/docker/py38/.tox/: .gitignore
vxl/: __init__.py  constants.py  transmission.py  transmission_constants.py  utils.py  vxl.py
(+145 files in other folders)
