# SPDX-FileCopyrightText: 2023 Ross Patterson <me@rpatterson.net>
#
# SPDX-License-Identifier: MIT

[build-system]
# https://setuptools.pypa.io/en/latest/build_meta.html#how-to-use-it
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# Use VCS tags as the sole authority on versions.  Dynamically determine the current
# version from VCS tags:
# https://github.com/pypa/setuptools_scm#pyprojecttoml-usage
write_to = "src/prunerr/version.py"
# Uncomment to test uploading to PyPI locally
# local_scheme = "no-local-version"

[tool.pylint.MASTER]
# Ensure `duplicate-code` and any other errors that depend on not runnining in parallel
# are reported:
jobs = 1
enable-all-extensions = true
output-format = "colorized"
ignore-paths = [
# Managed by tools, best to use `# pylint: disable=...` inline comments for any other
# ignores.
    "src/.+/version.py",
    ".*/src/.+/version.py",
]
# Extend linting to usage of trusted extension packages
extension-pkg-allow-list = ["lxml"]
fail-under = 10
[tool.pylint.TYPECHECK]
# Ignore false negatives from external packages
ignored-classes = ["lxml.etree.QName.localname"]
# Match Black's defaults
# https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#pylint
[tool.pylint.format]
max-line-length = "88"
[tool.pylint."messages control"]
disable = [
    # Workaround Prospector bug with PyLint:
    # https://github.com/PyCQA/prospector/issues/596#issue-1592499675
    "relative-beyond-top-level",
    # I'm not sure I agree with PyLiint here.  I prefer my `TODO`s to be in the the most
    # appropriate context where the change should happen.  It helps my recall.  If someone
    # else wants to take the time to move the `TODO`s into `./TODO.rst`, I won't object as
    # long as sufficient context comes along with them.
    "fixme",
]

[[tool.mypy.overrides]]
module = [
       # BBB: Compatibility with older Python versions
       "backports.cached_property", "pathlib3x",
       # Direct dependencies
       "argcomplete", "transmission_rpc", "arrapi.*",
       ]
ignore_missing_imports = true

[tool.vulture]
# https://github.com/jendrikseipp/vulture#ignoring-files
exclude = ["src/prunerr/version.py"]

[tool.isort]
# Match Black's defaults
# https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#isort
profile = "black"
