# SPDX-FileCopyrightText: 2023 Ross Patterson <me@rpatterson.net>
#
# SPDX-License-Identifier: MIT

[metadata]
name = prunerr
version = attr: src.prunerr.version
description = Perma-seed Servarr media libraries
url = https://gitlab.com/rpatterson/prunerr
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Ross Patterson
author_email = me@rpatterson.net
license = MIT
keywords =
    servarr
    sonarr
    radarr
    transmission
    bittorent
    torrent
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: POSIX :: BSD
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3 :: Only
    Topic :: Communications :: File Sharing
    Topic :: Internet

[options]
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html#using-a-src-layout
package_dir =
    =src
packages=find:
python_requires = >=3.7
install_requires =
    # BBB: Compatibility with older Python versions
    backports.cached-property; python_version < "3.8"
    pathlib3x; python_version < "3.10"
    # CLI Completion
    argcomplete
    # Specific download client APIs
    transmission-rpc<4
    # Graceful handling of logging when run on the console or as a daemon
    service-logging
    # Configuration file format
    pyyaml
    # Servarr API clients/wrappers
    arrapi>=1.2
    # Retry on connection errors
    tenacity

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    prunerr = prunerr:main

[options.extras_require]
# Libraries and tools used to run the test suite but not needed by end-users:
test =
# Libraries used in the actual code of the test suite
    requests-mock
# Development tools not strictly needed by the test suite
    pytest
# Manage fixed/pinned versions in `./requirements/**.txt`.  Though not used in the
# tests, needed here so versions can be compiled for all Python versions:
    pip-tools
# Development tools not strictly needed by the test suite but that need this
# package/dist and its dependencies to be to be on the same `sys.path`, IOW to be
# importable:
devel =
    coverage
# Code style and linting tools
# Chose prospector based mostly on this excellent blog:
# https://pawamoy.github.io/posts/python-static-code-analysis-tools/#prospector
    prospector[with_everything]
    xenon
# Check reStructuredText documentation:
    rstcheck
# Check copyright and licensing:
# Prevent upgrading to broken releases:
# https://github.com/fsfe/reuse-tool/issues/738
    reuse<1.1.0
# Code formatting tools
    black
    autoflake
    autopep8
# MyPy type libraries
    types-PyYAML
# Build tools that don't need this package to be importable but do need to be installed
# inside the container.
# Generate release notes/changelogs
    towncrier
# Build installable distributions, AKA packages
    build

[tool:pytest]
testpaths = src/prunerr

[coverage:run]
command_line = -m pytest --junit-xml=pytest-junit.xml
branch = True
source = src
[coverage:report]
fail_under = 100
show_missing = True

[flake8]
exclude = src/*/version.py
# Match Black's defaults
# https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#flake8
max-line-length = 88
extend-ignore = E203
aggressive = 3
experimental = true
