# SPDX-FileCopyrightText: 2023 Ross Patterson <me@rpatterson.net>
#
# SPDX-License-Identifier: MIT

[metadata]
# TEMPLATE: Adjust this Python distribution metadata as appropriate for your project:
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html#metadata
name = project-structure
version = attr: src.projectstructure.version
description = Project structure foundation or template, CLI console scripts.
url = https://gitlab.com/rpatterson/project-structure
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = template, structure
author = Ross Patterson
author_email = me@rpatterson.net
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
    Topic :: Utilities

[options]
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html#using-a-src-layout
package_dir =
    =src
packages=find:
python_requires = >=3.8
# TEMPLATE: Add the run-time dependencies, as opposed to build, test, or development
# requirements, for your project:
install_requires =
# CLI Completion
    argcomplete

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    project-structure = projectstructure:main

[options.extras_require]
# Libraries and tools used to run the test suite but not needed by end-users:
test =
    pytest
    coverage
# Manage fixed/pinned versions in `./requirements/**.txt`. Though not used in the tests,
# needed here to compile requrement versions for each supported Python version:
    pip-tools
# Development tools not strictly needed by the test suite but that need this
# package/dist and its dependencies to be to be on the same `sys.path`, IOW to be
# importable:
devel =
# Code style and linting tools
# Chose prospector based mostly on this excellent blog:
# https://pawamoy.github.io/posts/python-static-code-analysis-tools/#prospector
    prospector[with_everything]
    xenon
# Code formatting tools
    black
    autoflake
    autopep8
# Build tools that don't need to import this package that the development container does
# need installed:
# Build installable distributions, AKA packages
    build

[tool:pytest]
testpaths = src/projectstructure

[coverage:run]
command_line = -m pytest --junit-xml=pytest-junit.xml
branch = True
source = src
omit = src/projectstructure/version.py
[coverage:report]
fail_under = 100
show_missing = True

[flake8]
exclude = src/*/version.py
# Match Black's defaults
# https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#flake8
max-line-length = 88
extend-ignore = E203
aggressive = 3
experimental = true

[pydocstyle]
match = .*\.py
# See `./.prospector.yaml` for reasons behind these ignores:
add_ignore = D212,D203,D200
